--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,17 +14,52 @@ body {
 }
 
 a {
-  color: #0563bb;
+  color: #00615c;
   text-decoration: none;
 }
 
 a:hover {
-  color: #067ded;
+  color: rgb(0, 146, 127);
   text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
+}
+
+/*--------------------------------------------------------------
+# Show more
+--------------------------------------------------------------*/
+
+.pub-icons{
+  color: #45505b;
+}
+
+div.text-container {
+  text-align: justify;
+  margin: 0 auto;
+  width: 100%;    
+}
+
+.hideContent {
+  overflow: hidden;
+  line-height: 17px;
+  font-size: 14px;
+  height: 51px;
+}
+
+.showContent {
+  line-height: 17px;
+  font-size: 14px;
+  height: auto;
+}
+
+.showContent{
+  height: auto;
+}
+
+.show-more {
+  text-align: justify;
 }
 
 /*--------------------------------------------------------------
@@ -37,7 +72,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0563bb;
+  background: #00615c;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -49,7 +84,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #0678e3;
+  background: rgb(0, 146, 127);
   color: #fff;
 }
 .back-to-top.active {
@@ -76,7 +111,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #0563bb;
+  border: 6px solid #00615c;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -190,7 +225,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
   color: #fff;
-  background: #0563bb;
+  background: #00615c;
 }
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {
   color: #fff;
@@ -233,7 +268,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #0563bb;
+  background-color: #00615c;
 }
 
 /*--------------------------------------------------------------
@@ -274,7 +309,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
 }
 #hero p span {
-  color: #0563bb;
+  color: #00615c;
   letter-spacing: 1px;
 }
 #hero .social-links {
@@ -289,7 +324,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
 }
 #hero .social-links a:hover {
-  color: #0563bb;
+  color: #00615c;
 }
 @media (max-width: 992px) {
   #hero {
@@ -343,7 +378,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #0563bb;
+  background: #00615c;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -374,7 +409,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #0563bb;
+  color: #00615c;
   line-height: 0;
 }
 .about .content p:last-child {
@@ -398,7 +433,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #0563bb;
+  background: #00615c;
   color: #fff;
   border-radius: 50px;
   display: inline-flex;
@@ -449,7 +484,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #0563bb;
+  background-color: #00615c;
 }
 
 /*--------------------------------------------------------------
@@ -465,7 +500,7 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #0563bb;
+  border-left: 2px solid #00615c;
   position: relative;
 }
 .resume .resume-item h4 {
@@ -474,7 +509,7 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #0563bb;
+  color: #00615c;
   margin-bottom: 10px;
 }
 .resume .resume-item h5 {
@@ -503,7 +538,7 @@ section {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #0563bb;
+  border: 2px solid #00615c;
 }
 
 /*--------------------------------------------------------------
@@ -534,7 +569,7 @@ section {
   transition: all 0.3s ease-in-out;
 }
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #0563bb;
+  color: #00615c;
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -662,10 +697,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #00615c;
 }
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #00615c;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -702,8 +737,8 @@ section {
 # Services
 --------------------------------------------------------------*/
 .services .icon-box {
-  text-align: center;
-  padding: 70px 20px 80px 20px;
+  text-align: left;
+  padding: 20px 20px 20px 20px;
   transition: all ease-in-out 0.3s;
   background: #fff;
   box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
@@ -742,7 +777,7 @@ section {
   transition: ease-in-out 0.3s;
 }
 .services .icon-box p {
-  line-height: 24px;
+  line-height: 17px;
   font-size: 14px;
   margin-bottom: 0;
 }
@@ -751,13 +786,13 @@ section {
   box-shadow: 0px 0 35px 0 rgba(0, 0, 0, 0.08);
 }
 .services .iconbox-blue i {
-  color: #47aeff;
+  color: #00615c;
 }
 .services .iconbox-blue:hover .icon i {
   color: #fff;
 }
 .services .iconbox-blue:hover .icon path {
-  fill: #47aeff;
+  fill: #00615c;
 }
 .services .iconbox-orange i {
   color: #ffa76e;
@@ -862,10 +897,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #00615c;
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #00615c;
 }
 @media (min-width: 992px) {
   .testimonials .testimonial-item p {
@@ -882,7 +917,7 @@ section {
 }
 .contact .info i {
   font-size: 20px;
-  color: #0563bb;
+  color: #00615c;
   float: left;
   width: 44px;
   height: 44px;
@@ -910,7 +945,7 @@ section {
   margin-top: 40px;
 }
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #0563bb;
+  background: #00615c;
   color: #fff;
 }
 .contact .php-email-form {
@@ -969,7 +1004,7 @@ section {
   padding: 10px 12px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #0563bb;
+  background: #00615c;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -1007,8 +1042,8 @@ section {
   padding: 30px 0;
 }
 #footer h3 {
-  font-size: 36px;
-  font-weight: 700;
+  font-size: 33px;
+  font-weight: 600;
   position: relative;
   font-family: "Poppins", sans-serif;
   padding: 0;
@@ -1026,7 +1061,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #0563bb;
+  background: #00615c;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1038,7 +1073,7 @@ section {
   transition: 0.3s;
 }
 #footer .social-links a:hover {
-  background: #0678e3;
+  background: rgb(0, 146, 127);
   color: #fff;
   text-decoration: none;
 }
