--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,7 +345,7 @@ div.text-container {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 40px 0;
   overflow: hidden;
 }
 
@@ -524,7 +524,7 @@ section {
   padding-left: 20px;
 }
 .resume .resume-item ul li {
-  padding-bottom: 10px;
+  padding-bottom: 0px;
 }
 .resume .resume-item:last-child {
   padding-bottom: 0;
@@ -737,11 +737,11 @@ section {
 # Services
 --------------------------------------------------------------*/
 .services .icon-box {
-  text-align: left;
-  padding: 20px 20px 20px 20px;
-  transition: all ease-in-out 0.3s;
-  background: #fff;
-  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
+    text-align: left;
+    padding: 20px 20px 20px 20px;
+    transition: all ease-in-out 0.3s;
+    background: #fff;
+    box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 24%);
 }
 .services .icon-box .icon {
   margin: 0 auto;
