--- a/assets/css/light-style.css
+++ b/assets/css/light-style.css
@@ -29,6 +29,10 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Mine
 --------------------------------------------------------------*/
+.dark-toggle:hover {
+  background: #000000 !important;
+}
+
 .pubYearTitle{
   text-align: center;
   font-weight: 700;
@@ -254,8 +258,8 @@ div.text-container {
 }
 @media (max-width: 992px) {
   #header {
-    width: 300px;
-    background: #fff;
+    width: 200px;
+    background: #ffffffb2;
     border-right: 1px solid #e6e9ec;
     left: -300px;
   }
@@ -371,6 +375,7 @@ div.text-container {
   /*width: 100%;
   #height: 100vh;
   background: url("../img/hero-bg.jpg") top right no-repeat;*/
+  background: #f7f8f9;
   background-size: cover;
   position: relative;
 }
@@ -381,7 +386,6 @@ div.text-container {
 }
 #hero:before {
   content: "";
-  background: rgba(255, 255, 255, 0.8);
   position: absolute;
   bottom: 0;
   top: 0;
