--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -30,8 +30,26 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Mine
 --------------------------------------------------------------*/
+.dark-toggle {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  z-index: 99600;
+  background: #ffffff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  transition: all 0.4s;
+}
+
+.dark-toggle i {
+  font-size: 28px;
+  color: #000000;
+  line-height: 0;
+}
+
 .dark-toggle:hover {
-  background: #000000 !important;
+  background: #00615c !important;
 }
 
 .pubYearTitle{
@@ -168,7 +186,7 @@ div.text-container {
   visibility: hidden;
   opacity: 0;
   right: 15px;
-  bottom: 15px;
+  bottom: 60px;
   z-index: 996;
   background: #00615c;
   width: 40px;
