--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -48,8 +48,10 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 
-.dark-toggle:hover {
-  background: #00615c !important;
+@media screen and (min-width: 800px) {
+  .dark-toggle:hover {
+    background: #00615c !important;
+  }
 }
 
 .pubYearTitle{
@@ -627,7 +629,7 @@ section {
 }
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #363636;
+  background: #282828;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -853,7 +855,7 @@ section {
     text-align: left;
     padding: 20px 20px 20px 20px;
     transition: all ease-in-out 0.3s;
-    background:#363636;
+    background: #282828;
     box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 10%);
 }
 .services .icon-box .icon {
