--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -221,7 +221,7 @@ div.text-container {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #fff;
+  background: #242424;
 }
 
 #preloader:before {
