--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -279,9 +279,9 @@ div.text-container {
 }
 @media (max-width: 992px) {
   #header {
-    width: 200px;
+    width: 100%;
     background: #262626de;
-    left: -300px;
+    left: -100%;
   }
 }
 
@@ -316,7 +316,7 @@ div.text-container {
   padding: 10px 18px;
   margin-bottom: 8px;
   transition: 0.3s;
-  font-size: 15px;
+  font-size: 17px;
   border-radius: 50px;
   background: #bdbdbd;
   height: 56px;
