--- a/assets/css/light-style.css
+++ b/assets/css/light-style.css
@@ -278,10 +278,10 @@ div.text-container {
 }
 @media (max-width: 992px) {
   #header {
-    width: 200px;
+    width: 100%;
     background: #ffffffb2;
     border-right: 1px solid #e6e9ec;
-    left: -300px;
+    left: -100%;
   }
 }
 
@@ -316,7 +316,7 @@ div.text-container {
   padding: 10px 18px;
   margin-bottom: 8px;
   transition: 0.3s;
-  font-size: 15px;
+  font-size: 17px;
   border-radius: 50px;
   background: #f2f3f5;
   height: 56px;
