--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -850,6 +850,7 @@ section {
 # Services
 --------------------------------------------------------------*/
 .services .icon-box {
+    border-radius: 10px;
     text-align: left;
     padding: 20px 20px 20px 20px;
     transition: all ease-in-out 0.3s;
