--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -27,6 +27,11 @@ a:hover {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
+
+iframe{
+  box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 5%) !important;
+}
+
 /*--------------------------------------------------------------
 # Mine
 --------------------------------------------------------------*/
