--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -45,6 +45,34 @@ iframe{
 /*--------------------------------------------------------------
 # Mine
 --------------------------------------------------------------*/
+.resume-show-more{
+  overflow: hidden;
+  max-height: 22px;
+}
+.resume-show-more .icon{
+  text-align: center;
+  color: #00615c;
+  font-size: 20px;
+  background: none;
+  border: none;
+}
+.resume-show-more.show{
+  max-height: 100%;
+}
+
+.resume-item p{
+  margin-bottom: 0px;
+}
+
+.resume-show-more p{
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
+}
+
+.icon i{
+  -webkit-text-stroke: 2px;
+}
+
 .dark-toggle {
   position: fixed;
   bottom: 15px;
@@ -100,7 +128,7 @@ div.text-container {
 }
 
 .showContent {
-  line-height: 17px;
+  line-height: 20px;
   font-size: 14px;
   height: auto;
 }
