--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -42,6 +42,11 @@ iframe{
   padding: 10px 15px;
 }
 
+#profileImage{
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px 0px #00000066;
+}
+
 /*--------------------------------------------------------------
 # Mine
 --------------------------------------------------------------*/
