--- a/assets/css/light-style.css
+++ b/assets/css/light-style.css
@@ -35,6 +35,11 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 18px;
   padding: 10px 15px;
 }
+
+#profileImage{
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px 0px #00000066;
+}
 /*--------------------------------------------------------------
 # Mine
 --------------------------------------------------------------*/
