--- a/assets/css/light-style.css
+++ b/assets/css/light-style.css
@@ -331,6 +331,7 @@ div.text-container {
 @media (min-width: 992px) {
   #main {
     margin-left: 100px;
+    margin-right: 100px;
   }
 }
 /*--------------------------------------------------------------
