--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -337,6 +337,7 @@ div.text-container {
 @media (min-width: 992px) {
   #main {
     margin-left: 100px;
+    margin-right: 100px;
   }
 }
 /*--------------------------------------------------------------
