--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -40,6 +40,7 @@ iframe{
   margin-right: auto;
   font-size: 18px;
   padding: 10px 15px;
+  border-radius: 10px;
 }
 
 #profileImage{
@@ -685,6 +686,7 @@ section {
   display: inline-block;
   font-weight: 500;
   margin-bottom: 10px;
+  border-radius: 5px;
 }
 .resume .resume-item ul {
   padding-left: 20px;
