--- a/assets/css/light-style.css
+++ b/assets/css/light-style.css
@@ -44,6 +44,23 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Mine
 --------------------------------------------------------------*/
+details[open] summary ~ * {
+  animation: sweep .75s ease-in-out;
+}
+
+@keyframes sweep {
+  0%    {opacity: 0; transform: translateY(-10px)}
+  100%  {opacity: 1; transform: translateY(0)}
+}
+
+.show-more-summary{
+  font-weight: 400;
+    white-space: nowrap;
+    background: #f7f8f9;
+    width: max-content;
+    padding: 5px 5px;
+}
+
 .resume-show-more{
   overflow: hidden;
   max-height: 22px;
