--- a/assets/css/dark-style.css
+++ b/assets/css/dark-style.css
@@ -1,4 +1,5 @@
 /**
+* BASED ON:
 * Template Name: MyResume - v4.7.0
 * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
 * Author: BootstrapMade.com
@@ -12,6 +13,10 @@ body {
   font-family: "Open Sans", sans-serif;
   background-color: #242424;
   color: #ffffff;
+}
+
+.color-text {
+  color: #00615c;
 }
 
 a {
